# Gym-Manager-using-Agentic-AI

./: README.md  auth.py  config.yaml  credentials.json  pyproject.toml
db/: chroma.sqlite3
memory/: chroma.sqlite3
outputs/: food.json  nutrition_plan.json  review_pain.json  workout_plan.json
src/gym_manager/: crew.py  main.py
src/gym_manager/config/: agents.yaml  tasks.yaml
src/gym_manager/storage/: crew_memory.db  week_memory.db
src/gym_manager/tools/: form_response.py  pg_tool.py  sheets_fetch.py  survey_email_template.py  youtube_search_tool.py
tests/: test_email.py  test_full_workflow.py  test_sheets_fetch.py  test_survey_email.py
