[project]
name = "gymman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.156.0",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "google-generativeai>=0.3.0",
]
